force-app/main/default/objects/Customer_Plant__c/Customer_Plant__c.object-meta.xml
<CustomObject>
    <description>This is a Junction object for Contact and Plant</description>
    <label>Customer Plant</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Customer Plant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>