force-app/main/default/objects/Customer_Plant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used for contact lookup on Customer Plant Object.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Plant</relationshipLabel>
    <relationshipName>Customer_Plant</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>