force-app/main/default/objects/Customer_Plant__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used for plant lookup on Customer Plant Object.</description>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Customer Plant</relationshipLabel>
    <relationshipName>Customer_Plant</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>