force-app/main/default/objects/Customer_Plant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request site access</fullName>
                <default>true</default>
                <label>Request site access</label>
            </value>
            <value>
                <fullName>Approved site access</fullName>
            </value>
            <value>
                <fullName>Decline site access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>